# 202203.rust-axum-async-graphal-blog

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: frontend-test.yaml
.husky/: pre-commit  pre-push
backend/: .gitignore  Cargo.toml  Dockerfile
backend/src/: frontmatter.rs  lib.rs  main.rs
backend/src/backend/: file.rs  post.rs
backend/src/datastore/: file.rs  post.rs
backend/src/graphql/: model.rs
docs/: about.md
example/posts/: sample1.md  sample2.md
frontend/: .env.example  Dockerfile  additional.d.ts  package.json
frontend/components/: editor.tsx  layout.tsx  loading-page.tsx
frontend/hooks/: useBlog.ts
frontend/pages/: _app.tsx  index.tsx  list.tsx
frontend/pages/posts/: [slug].tsx  index.tsx
frontend/pages/posts-editor/: [slug].tsx  index.tsx
frontend/styles/: global.css
frontend/test/pages/: index.test.tsx
frontend/test/pages/__snapshots__/: index.test.tsx.snap
frontend/test/testUtils/: testingLibraryWrapper.ts
src/: lib.rs  main.rs
src/backend/: file.rs  post.rs
src/graphql/: model.rs
